// ApplyMint AI Database Schema - DBML Format
// This file defines the complete database schema in DBML format
// Can be used with DBML tools to generate visual diagrams

Project ApplyMint_AI {
  database_type: 'PostgreSQL'
  Note: 'AI-powered job search platform database schema'
}

/* =========================
AUTH SCHEMA
========================= */

Table auth.users {
  id uuid [pk]
  instance_id uuid
  email varchar
  phone varchar [unique]
  role varchar
  is_super_admin boolean
  is_anonymous boolean
  created_at timestamptz
  updated_at timestamptz
}

Table auth.identities {
  id uuid [pk]
  user_id uuid
  provider varchar
  provider_id varchar
  email varchar
  created_at timestamptz
}

Ref: auth.identities.user_id > auth.users.id

Table auth.sessions {
  id uuid [pk]
  user_id uuid
  created_at timestamptz
  updated_at timestamptz
  ip inet
  user_agent varchar
}

Ref: auth.sessions.user_id > auth.users.id

Table auth.mfa_factors {
  id uuid [pk]
  user_id uuid
  factor_type factor_type
  status factor_status
  created_at timestamptz
}

Ref: auth.mfa_factors.user_id > auth.users.id

Table auth.oauth_clients {
  id uuid [pk]
  client_name varchar
  client_type oauth_client_type
  created_at timestamptz
}

Table auth.oauth_authorizations {
  id uuid [pk]
  client_id uuid
  user_id uuid
  status oauth_authorization_status
  created_at timestamptz
}

Ref: auth.oauth_authorizations.client_id > auth.oauth_clients.id
Ref: auth.oauth_authorizations.user_id > auth.users.id

/* =========================
PUBLIC SCHEMA
========================= */

Table public.profiles {
  id uuid [pk]
  email varchar [unique]
  first_name varchar
  last_name varchar
  phone_number varchar
  created_at timestamptz
}

Ref: public.profiles.id > auth.users.id

Table public.companies {
  id uuid [pk]
  name varchar
  industry varchar
  website varchar
  location varchar
  created_at timestamptz
}

Table public.jobs {
  id uuid [pk]
  company_id uuid
  title varchar
  location varchar
  is_remote boolean
  job_type varchar
  experience_level varchar
  salary_min decimal
  salary_max decimal
  is_active boolean
  posted_at timestamptz
}

Ref: public.jobs.company_id > public.companies.id

Table public.job_applications {
  id uuid [pk]
  job_id uuid
  user_id uuid
  resume_id uuid
  status varchar
  applied_at timestamptz
}

Ref: public.job_applications.job_id > public.jobs.id
Ref: public.job_applications.user_id > auth.users.id
Ref: public.job_applications.resume_id > public.resumes.id

Table public.saved_jobs {
  id uuid [pk]
  job_id uuid
  user_id uuid
  saved_at timestamptz
}

Ref: public.saved_jobs.job_id > public.jobs.id
Ref: public.saved_jobs.user_id > auth.users.id

Table public.job_categories {
  id uuid [pk]
  name varchar [unique]
  parent_id uuid
}

Ref: public.job_categories.parent_id > public.job_categories.id

Table public.job_category_mappings {
  job_id uuid
  category_id uuid
  indexes {
    (job_id, category_id) [pk]
  }

}

Ref: public.job_category_mappings.job_id > public.jobs.id
Ref: public.job_category_mappings.category_id > public.job_categories.id

/* =========================
RESUME SYSTEM
========================= */

Table public.resumes {
  id uuid [pk]
  user_id uuid
  title varchar
  summary text
  is_default boolean
  created_at timestamptz
}

Ref: public.resumes.user_id > auth.users.id

Table public.work_experiences {
  id uuid [pk]
  resume_id uuid
  company varchar
  position varchar
  start_date date
  end_date date
}

Ref: public.work_experiences.resume_id > public.resumes.id

Table public.educations {
  id uuid [pk]
  resume_id uuid
  institution varchar
  degree varchar
  start_date date
  end_date date
}

Ref: public.educations.resume_id > public.resumes.id

Table public.skills {
  id uuid [pk]
  resume_id uuid
  name varchar
  level varchar
}

Ref: public.skills.resume_id > public.resumes.id

Table public.projects {
  id uuid [pk]
  resume_id uuid
  title varchar
  description text
}

Ref: public.projects.resume_id > public.resumes.id

Table public.certifications {
  id uuid [pk]
  resume_id uuid
  name varchar
  issuer varchar
  issue_date date
}

Ref: public.certifications.resume_id > public.resumes.id

/* =========================
INTERVIEWS & ACTIVITY
========================= */

Table public.interview_sessions {
  id uuid [pk]
  user_id uuid
  job_id uuid
  title varchar
  completed_at timestamptz
}

Ref: public.interview_sessions.user_id > auth.users.id
Ref: public.interview_sessions.job_id > public.jobs.id

Table public.notifications {
  id uuid [pk]
  user_id uuid
  title varchar
  message text
  is_read boolean
  created_at timestamptz
}

Ref: public.notifications.user_id > auth.users.id

Table public.activity_logs {
  id uuid [pk]
  user_id uuid
  activity_type varchar
  created_at timestamptz
}

Ref: public.activity_logs.user_id > auth.users.id

/* =========================
ENUMS
========================= */

Enum factor_type {
  totp
  webauthn
  phone
}

Enum factor_status {
  unverified
  verified
}

Enum oauth_client_type {
  public
  confidential
}

Enum oauth_authorization_status {
  pending
  approved
  denied
  expired
}
